kubernetes/apps/zamaz/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zamaz
  labels:
    app.kubernetes.io/name: zamaz
    app.kubernetes.io/part-of: zamaz-platform
    app.kubernetes.io/managed-by: kustomize
    project: zero-trust-auth
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: "workload=app"
